# wasm-dicey

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  webpack.config.js
crate/: Cargo.toml  README.md
crate/src/: dice.rs  grid.rs  hex.rs  lib.rs  play.rs  primitive.rs  utils.rs
js/: board.js  bootstrap.js  colours.js  dice.js  index.js  prepare.js
