[package]
name = "wasm-dicey"
version = "0.1.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]
description = "Wasm frontend for dicey-dice."
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
dicey-dice = { git = "ssh://git@github.com/kvsari/dicey-dice.git", rev = "39f46fdbf952caccd4a227118f63495fb49c5664" }
cfg-if = "0.1.6"
wasm-bindgen = "=0.2.34" # Lock to 0.2.34 due to bug https://github.com/rustwasm/wasm-bindgen/issues/1246
console_error_panic_hook = { version = "0.1.5", optional = true }
