[package]
name = "wasm-dicey"
version = "0.1.0"
authors = ["Stephan Luther <kvsari@gmail.com>"]
description = "Wasm frontend for dicey-dice."
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
dicey-dice = { git = "ssh://git@github.com/kvsari/dicey-dice.git", rev = "60ebcf6fea3400bb58947fd08a3225b9bfdd045b" }
cfg-if = "0.1.7"
wasm-bindgen = "=0.2.39"
console_error_panic_hook = { version = "0.1.6", optional = true }
